// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1000"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`2. default layout without uri 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src={null}
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`3. handle layout change 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800"
    />
    <div>
      <div>
        <div>
          <svg
            height={164.46700507614213}
            version="1.1"
            viewBox="145 50 108 120"
            width={164.46700507614213}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <path
                d="6a6c07166e9c40e4f62e57af2b507822"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. an invalid uri 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="not-valid"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`5. no url in environment 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="not-valid&resize=1400"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`6. with existing url params 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`7. remove the low res image after the high res image has transitioned in 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`7. remove the low res image after the high res image has transitioned in 2`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`8. only a low res image 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`9. fade in the low res image 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`9. fade in the low res image 2`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;
